Fix album flip flickering in chrome.

--- a/source/stylesheets/app.css.sass
+++ b/source/stylesheets/app.css.sass
@@ -307,8 +307,9 @@ ul.albums
       width: 100%
       height: 100%
     > .cover
-      -webkit-transform: rotateX(180deg)
+      -webkit-transform: rotateX(180deg) translateZ(0.1px)
     > .back
+      -webkit-transform: translateZ(0.1px)
       width: 500px
       height: 500px
       z-index: 10
